--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@reach/visually-hidden": "^0.16.0",
     "@supabase/supabase-js": "^1.33.3",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
